# eis_pointing

./: .gitignore  LICENSE.txt  README.md  compute_eis_pointing.py  eis_aia_emission.py  eis_pointing.py  export_windata.pro  prep.pro  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
coregister/: rasters.py  slits.py  tools.py
eis_pointing/: __init__.py  driver.py  driver_cli.py  eis_aia_emission.py  eis_aia_registration.py  export_windata.pro  prep.pro
eis_pointing/coregister/: __init__.py  images.py  rasters.py  slits.py  tools.py
eis_pointing/utils/: aia.py  aia_raster.py  cli.py  eis.py  files.py  idl.py  num.py  plots.py  sun.py
steps/: full_registration.yml  shift_only.yml  single_image.yml  translation_only.yml
utils/: aia.py  aia_raster.py  cli.py  eis.py  files.py  idl.py  misc.py  num.py
